<resources>
    <string name="app_name">Obsido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_all_entries" translatable="true">Clear All</string>


    <string name="action_calendar_today" translatable="true">Calendar Today</string>
    <string name="action_hide_events" translatable="true">Hide Events</string>
    <string name="action_show_events" translatable="true">Show Events</string>
    <string name="action_save" translatable="true">Save</string>
    <string name="action_discard" translatable="true">Discard</string>
    <string name="action_keep_editing" translatable="true">Keep Editing</string>

    <string name="unsaved_changes_dialog_msg" translatable="true">Discard your changes and quit editing?</string>

    <!-- Preference strings -->
    <string name="pref_title_theme" translatable="true">Theme</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_label" translatable="true">Theme</string>
    <string name="pref_hide_events_key" translatable="false">hide_events</string>

    <!-- Labels for the colour theme ListPreferences -->
    <string name="pref_show_red_theme_label" translatable="true">Red</string>
    <string name="pref_show_blue_theme_label" translatable="true">Blue</string>
    <string name="pref_show_green_theme_label" translatable="true">Green</string>
    <string name="pref_show_pink_theme_label" translatable="true">Pink</string>

    <!-- Keys name for storing colour themes in SharedPreferences -->
    <string name="pref_show_red_theme_key" translatable="false">show_red_theme</string>
    <string name="pref_show_blue_theme_key" translatable="false">show_blue_theme</string>
    <string name="pref_show_green_theme_key" translatable="false">show_green_theme</string>
    <string name="pref_show_pink_theme_key" translatable="false">show_pink_theme</string>

    <!-- NavigationView drawer strings -->
        <!-- General layer -->
        <string name="nav_view_overview" translatable="true">Overview</string>
        <string name="nav_view_agenda" translatable="true">Agenda</string>
        <string name="nav_view_calendar" translatable="true">Calendar</string>
        <string name="nav_view_statistics" translatable="true">Statistics</string>

        <!-- User lists layer-->
        <string name="nav_partners" translatable="true">Partners</string>
        <string name="nav_fetishes" translatable="true">Fetishes</string>
        <string name="nav_sex_acts" translatable="true">Sex Acts</string>
        <string name="nav_places" translatable="true">Places</string>
        <string name="nav_positions" translatable="true">Positions</string>

        <!-- User states layer -->
        <string name="nav_view_remove_ads" translatable="true">Remove Ads</string>
        <string name="nav_view_contact_support" translatable="true">Contact Support</string>
        <string name="nav_view_achievements" translatable="true">Achievements</string>
        <string name="nav_view_reminders" translatable="true">Reminders</string>
        <string name="nav_view_password" translatable="true">Password</string>

    <!-- Strings title text for the text views when there is no data -->
    <string name="empty_partners_list" translatable="true">It\'s a bit lonely here</string>
    <string name="empty_partners_subtitle" translatable="true">Get started by adding a partner</string>

    <!-- Strings for the Vertical Stepper to add a new partner -->
    <string name="stepper_add_partner_name" translatable="true">Name</string>
    <string name="stepper_add_partner_description" translatable="true">Description</string>
    <string name="stepper_add_partner_gender" translatable="true">Gender</string>

        <string name="stepper_add_partner_gender_male" translatable="true">Male</string>
        <string name="stepper_add_partner_gender_female" translatable="true">Female</string>


    <string name="stepper_add_partner_age" translatable="true">Age</string>

    <!-- Strings for the Vertical Stepper to move onto the next step -->
    <string name="stepper_add_partner_next_button">Next</string>
    <string name="stepper_add_partner_last_button">Done</string>

    <!-- Strings for new toast messages -->
    <string name="shared_preferences_theme_changed">Applying changes</string>

    <!-- Strings for the title of the Stepper activity toa dd the partner [CHAR LIMIT = 20] -->
    <string name="stepper_add_partner" translatable="true">Add a partner</string>
    <string name="stepper_edit_partner" translatable="true">Edit</string>



</resources>
