<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_type_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_nav_overview"
            android:title="@string/nav_view_overview" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_nav_agenda"
            android:title="@string/nav_view_agenda" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_nav_calendar"
            android:title="@string/nav_view_calendar" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_nav_statistics"
            android:title="@string/nav_view_statistics" />
    </group>

    <group
        android:id="@+id/nav_type_user_lists"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_nav_partners"
            android:title="@string/nav_partners" />

        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_nav_achievements"
            android:title="@string/nav_view_achievements" />

        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_nav_reminders"
            android:title="@string/nav_view_reminders" />

    </group>

    <group
        android:id="@+id/nav_type_user_states"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/ic_nav_password"
            android:title="@string/nav_view_password" />

        <item
            android:id="@+id/nav_remove_ads"
            android:icon="@drawable/ic_nav_remove_ads"
            android:title="@string/nav_view_remove_ads" />

        <item
            android:id="@+id/nav_contact_support"
            android:icon="@drawable/ic_nav_contact_support"
            android:title="@string/nav_view_contact_support" />

    </group>

</menu>
