<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navHeaderContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="@dimen/nav_activity_margin"
    android:paddingEnd="@dimen/nav_activity_margin"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
        android:id="@+id/navHeader"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@mipmap/ic_launcher_round" />

    <RelativeLayout
        android:id="@+id/navUserText"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@id/navHeader"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/nav_header_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/userNameSubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:text="@string/nav_header_subtitle"
            android:textSize="13sp"/>
    </RelativeLayout>
</RelativeLayout>
